test pass for FC7 - version 9.0.0